# proyecto-de-software

./: .gitignore  README.md
admin/: app.py  pyproject.toml
admin/src/core/: database.py  seeds.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/configuration/: __init__.py  configuration.py
admin/src/core/email/: email_utils.py
admin/src/core/institutions/: __init__.py  institution.py
admin/src/core/model/: model.py
admin/src/core/rol_permission/: __init__.py
admin/src/core/service_requests/: __init__.py  service_request.py
admin/src/core/services/: __init__.py  service.py
admin/src/core/test/: __init__.py  test.py
admin/src/web/: __init__.py  config.py  error.py
admin/src/web/api/: auth.py  configuration.py  institutions.py  services.py  stats.py  users.py
admin/src/web/controllers/: auth.py  configuration.py  institution.py  permissions.py  services.py  services_requests.py  test.py  users.py
admin/src/web/helpers/: apivalidations.py  auth.py  permissions.py  utils.py
admin/src/web/templates/: error.html  home.html  layout.html  layout_navbar.html  login.html  register.html
admin/src/web/templates/auth/: complete_register.html  login.html  register.html
admin/src/web/templates/configuration/: index.html
admin/src/web/templates/institutions/: confirm_delete.html  index.html  register.html  update.html
admin/src/web/templates/layout/: layout_navbar.html
admin/src/web/templates/services/: config.html  create.html  index.html  update.html
admin/src/web/templates/users/: home.html  (+1 more)
admin/static/styles/: navbar.css
(+35 files in other folders)
