[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["GastonAmantea <gaston14401@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
